--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <img src="/public/moranguinho.png" alt="Moranguinho" class="moranguinho-bg" />
+    <img src="/public/Ameixinha.webp" alt="Ameixinha" class="ameixinha-bg" />
   </body>
 </html>
